--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "vue",
+  "homepage": "https://tony-osama.github.io/vue",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -12,9 +13,11 @@
     "lint:oxlint": "oxlint . --fix -D correctness --ignore-path .gitignore",
     "lint:eslint": "eslint . --fix",
     "lint": "run-s lint:*",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
+    "bootstrap": "^5.3.5",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
